--- a/src/locale/locales/es/messages.po
+++ b/src/locale/locales/es/messages.po
@@ -2477,7 +2477,7 @@ msgid "Deer Settings"
 msgstr ""
 
 #: src/screens/Signup/StepInfo/index.tsx:172
-msgid "deer-social-ayla.pages.dev is part of the <0>ATmosphere</0>—the network of apps, services, and accounts built on the AT Protocol."
+msgid "deer-social-7m8.pages.dev is part of the <0>ATmosphere</0>—the network of apps, services, and accounts built on the AT Protocol."
 msgstr ""
 
 #: src/screens/Settings/AppearanceSettings.tsx:169
@@ -2777,7 +2777,7 @@ msgid "Don't have a code or need a new one? <0>Click here.</0>"
 msgstr "¿No tienes código o necesitas uno nuevo? <0>Haz clic aquí.</0>"
 
 #: src/screens/Signup/StepInfo/index.tsx:216
-msgid "Don't have an account provider or an existing Bluesky account? To create a new account on a Bluesky-hosted PDS, sign up through <0>bsky.app</0> first, then return to deer-social-ayla.pages.dev and log in with the account you created."
+msgid "Don't have an account provider or an existing Bluesky account? To create a new account on a Bluesky-hosted PDS, sign up through <0>bsky.app</0> first, then return to deer-social-7m8.pages.dev and log in with the account you created."
 msgstr ""
 
 #: src/components/dialogs/EmailDialog/components/ResendEmailText.tsx:37
