--- a/src/locale/locales/ko/messages.po
+++ b/src/locale/locales/ko/messages.po
@@ -2517,7 +2517,7 @@ msgid "Deer Settings"
 msgstr ""
 
 #: src/screens/Signup/StepInfo/index.tsx:171
-msgid "deer-social-ayla.pages.dev is part of the <0>ATmosphere</0>—the network of apps, services, and accounts built on the AT Protocol."
+msgid "deer.aylac.top is part of the <0>ATmosphere</0>—the network of apps, services, and accounts built on the AT Protocol."
 msgstr ""
 
 #: src/screens/Settings/AppearanceSettings.tsx:169
@@ -2849,7 +2849,7 @@ msgid "Don't have a code or need a new one? <0>Click here.</0>"
 msgstr "코드가 없거나 새 코드가 필요한가요? <0>이곳을 클릭하세요.</0>"
 
 #: src/screens/Signup/StepInfo/index.tsx:215
-msgid "Don't have an account provider or an existing Bluesky account? To create a new account on a Bluesky-hosted PDS, sign up through <0>bsky.app</0> first, then return to deer-social-ayla.pages.dev and log in with the account you created."
+msgid "Don't have an account provider or an existing Bluesky account? To create a new account on a Bluesky-hosted PDS, sign up through <0>bsky.app</0> first, then return to deer.aylac.top and log in with the account you created."
 msgstr ""
 
 #: src/components/dialogs/EmailDialog/components/ResendEmailText.tsx:37
